# sdos-summaryGen

./: CMakeLists.txt  README.md  Test.txt  apiUsage.md  app.py  doc.txt  embeddings.py  fountain_tool  init.txt  llama_cpp_script.py  main.py  ollama_client.py  ollama_script.py  parser.py  practice.py  requirements.txt  summarizer.py  summary_bigFish.txt  sys_prompts.py  test.fountain  test_parser
genSummaryQt/: 0_out.txt  abstracttask.cpp  abstracttask.h  character.txt  charactersummarizer.cpp  charactersummarizer.h  fountain.cpp  fountain.h  genSummaryQt  genSummaryQt.pro  main.cpp  ollamaclient.cpp  ollamaclient.h  prompts.qrc  scene.txt  scenesummarizer.cpp  scenesummarizer.h  scenesummarizer2.cpp  scenesummarizer2.h  storysummarizer.cpp  storysummarizer.h  taskqueue.cpp  taskqueue.h
log/: BigFish_characters_20260125_233422.txt  BigFish_scenes_20260125_233422.txt  BigFish_story_20260125_233422.txt  BrickAndSteel_20260127_180104_story_full.txt  BrickAndSteel_20260127_181936_story_full.txt  BrickAndSteel_20260127_182740_story_full.txt  BrickAndSteel_20260127_183707_story_full.txt  BrickAndSteel_20260128_172441_story_full.txt  BrickAndSteel_20260128_173105_story_full.txt  BrickAndSteel_20260128_174047_story_full.txt  BrickAndSteel_characters_20260125_230428.txt  BrickAndSteel_scenes_20260125_230428.txt  BrickAndSteel_story_20260125_230428.txt  test_20260127_183347_story_full.txt
sessions/: 7a0486ed-f76e-4692-8ff2-f2ecc3daa7b8.json  89651106-fd32-4288-9574-efc0b2465364.json  e6ccacb6-f4c2-4961-8be5-8a5a9eb0ec7f.json
src/: FountainParser.cpp  FountainParser.hpp  (+8 more)
(+5 files in other folders)
